--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
       <!--Name-->
       <section class="header-bg">
-        <div class="container header-container">
+        <div class="container">
           <h1 class="header">Effective Solutions for Your Business</h1>
           <button class="button-order" type="button">Order Service</button>
         </div>
@@ -182,18 +182,16 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <section class="footer">
-        <div class="container container-footer">
-          <a href="./index.html" class="logo-footer"
-            ><span class="web">Web</span>Studio</a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing &amp; growth solutions.
-          </p>
-        </div>
-      </section>
+    <footer class="footer">
+      <div class="container container-footer">
+        <a href="./index.html" class="logo-footer"
+          ><span class="web">Web</span>Studio</a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
