--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
     </header>
     <main>
       <!--Buttons-->
-      <section>
-        <div class="container container-portfolio">
+      <section class="container-portfolio">
+        <div class="container">
           <h1 class="header visually-hidden">Portfolio</h1>
           <ul class="buttons-list">
             <li><button class="button-portfolio" type="button">All</button></li>
@@ -68,7 +68,7 @@
           </ul>
           <ul class="apps-list">
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/banking-app.jpg"
                   alt="Banking App"
@@ -81,7 +81,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="Cashless Payment"
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/meditaion-app.jpg"
                   alt="Laptop"
@@ -107,7 +107,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="Car from the inside"
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Phone"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/online-courses.jpg"
                   alt="Happy woman"
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img
                   src="./images/inststories-concept.jpg"
                   alt="Collage"
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img src="./images/organic-food.jpg" alt="Fruits" width="360" />
                 <div class="container-app">
                   <h2 class="head">Organic Food</h2>
@@ -168,7 +168,7 @@
               </a>
             </li>
             <li class="app">
-              <a>
+              <a class="link-app" href="">
                 <img src="./images/coffee.jpg" alt="Coffee" width="360" />
                 <div class="container-app">
                   <h2 class="head">Fresh Coffee</h2>
@@ -181,18 +181,16 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <section class="footer">
-        <div class="container container-footer">
-          <a href="./index.html" class="logo-footer"
-            ><span class="web">Web</span>Studio</a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing &amp; growth solutions.
-          </p>
-        </div>
-      </section>
+    <footer class="footer">
+      <div class="container container-footer">
+        <a href="./index.html" class="logo-footer"
+          ><span class="web">Web</span>Studio</a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
